--- a/index.Rmd
+++ b/index.Rmd
@@ -94,7 +94,7 @@ demo_tbl
 
 ## Outcome Measurements 
 
-### GAS Hierarchy 
+### GAS Hierarchy - Number of minutes per week studying for Spanish class
 
 ```{r, include=FALSE}
 head(gas)
@@ -112,7 +112,7 @@ gas_tbl <- gas %>%
     width = 500)
 ```
 
-```{r, include=FALSE}
+```{r, include=TRUE}
 gas_tbl
 ```
 
@@ -462,19 +462,18 @@ status_plot_all <- ggplot(status_all, aes(session, status)) +
   geom_point(size = 2) +
   scale_x_continuous(limits = c(0, 13),
                      breaks = c(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13)) +
-  scale_y_continuous(limits = c(0, 60),
-                     breaks = c(0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60)) +
+  scale_y_continuous(limits = c(0, 50),
+                     breaks = c(0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50)) +
   theme_classic() +
   theme(plot.title = element_text(color = "black", face = "bold", hjust = 0.5)) +
   labs(x = "Session",
-       y = "Minutes Engaged in Online Spanish Lecture",
-       title = "Status Tracking Goal",
-       caption = "60-minute lecture") 
+       y = "Minutes per Week Spent Studing for Spanish",
+       title = "Status Tracking Goal") 
 
 status_plot_all
 
 ```
 
-```{r, include=FALSE}
+```{r, include=TRUE}
 status_plot_all
 ```
