--- a/index.Rmd
+++ b/index.Rmd
@@ -94,7 +94,7 @@ demo_tbl
 
 ## Outcome Measurements 
 
-### GAS Hierarchy - Number of minutes per week studying for Spanish class
+### GAS Hierarchy - Number of minutes per week spent studying for Spanish class
 
 ```{r, include=FALSE}
 head(gas)
@@ -467,7 +467,7 @@ status_plot_all <- ggplot(status_all, aes(session, status)) +
   theme_classic() +
   theme(plot.title = element_text(color = "black", face = "bold", hjust = 0.5)) +
   labs(x = "Session",
-       y = "Minutes per Week Spent Studing for Spanish",
+       y = "Minutes per Week Spent Studying for Spanish Class",
        title = "Status Tracking Goal") 
 
 status_plot_all
