Session 3 update with self-report pre-treatment phase measurements

--- a/index.Rmd
+++ b/index.Rmd
@@ -68,6 +68,9 @@ gas <- import(here("data", "GASY_gas.xlsx"),
 
 demo <- import(here("data", "GASY_demo.xlsx"),
                setclass = "tbl_df")
+
+strategy <- import(here("data", "GASY_strategy.xlsx"),
+                   setclass = "tbl_df")
 ```
 
 ## Demographic Information 
@@ -483,3 +486,47 @@ status_plot_all
 ```{r, include=TRUE}
 status_plot_all
 ```
+
+### Repeated Strategy Measurements {.tabset .tabset-fade .tabset-pills}
+
+#### Frequency of Strategy Use
+
+```{r, include=FALSE}
+
+#head(strategy)
+
+
+#freq_plot <- ggplot(strategy, aes(session, freq)) +
+  #geom_line() +
+  #geom_point(size = 2) +
+  #scale_x_continuous(limits = c(4, 13),
+                     #breaks = c(4, 5, 6, 7, 8, 9, 10, 11, 12, 13)) +
+  #scale_y_continuous(limits = c(0, 20),
+                     #breaks = c(0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20)) +
+  #theme_classic() +
+  #theme(plot.title = element_text(color = "black", face = "bold", hjust = 0.5)) +
+  #labs(x = "Session",
+       #y = "Number of Tasks",
+       #title = "Weekly Number of Tasks Entered into Planner") 
+  
+#freq_plot
+
+#help_plot <- ggplot(strategy, aes(session, help)) +
+  #geom_line() +
+  #geom_point(size = 2) +
+  #scale_x_continuous(limits = c(4, 13),
+                     #breaks = c(4, 5, 6, 7, 8, 9, 10, 11, 12, 13)) +
+  #scale_y_continuous(limits = c(0, 5),
+                    # breaks = c(1, 2, 3, 4, 5)) +
+  #theme_classic() +
+  #theme(plot.title = element_text(color = "black", face = "bold", hjust = 0.5)) +
+  #labs(x = "Session",
+      # y = "Level of Helpfulness",
+      # title = "Perceived Helpfulness of Planner",
+      # caption = "1 = Not Helpful at All\n 2 = Not Helpful\n 3 = Somewhat Helpful\n 4 = Helpful\n 5 = Very Helpful") 
+
+#help_plot
+
+```
+
+#### Perceived Strategy Helpfulness
