added note on possible strategy to measure last two sessions

--- a/index.Rmd
+++ b/index.Rmd
@@ -854,6 +854,8 @@ Cognitive Strategy: Use of the reminders app to set specific times throughout th
 
 * Participant will adhere to the two set reminders per week. 
 
+Cognitive Strategy identified during session 11 to be measured sessions 12 and 13: have an accountability partner to encourage one another to study for a desired amount of time. 
+
 
 #### Frequency of Strategy Use
 
