--- a/index.Rmd
+++ b/index.Rmd
@@ -313,7 +313,18 @@ brief_color_tbl <- function(df) {
                                     }
                                       ),
       `Post Treatment` = colDef(name = "Post Treatment",
-                                align = "center")),
+                                align = "center",
+                                style = function(value) {
+                                      if (value >= 65) {
+                                        color <- "#e00000"
+                                      } else if (value < 65) {
+                                        color <- "#008000"
+                                      } else {
+                                        color <- "#777"
+                                      } 
+                                       list(color = color, fontWeight = "bold")
+                                    }
+                                )),
     pagination = FALSE,
     striped = TRUE,
     outlined = TRUE,
@@ -325,7 +336,7 @@ brief_color_tbl <- function(df) {
     width = 500)
 }
 
-brief_color_tbl(brief_self_2)
+#brief_color_tbl(brief_self_2)
 
 # color scheme attempt 
 orange_pal <- function(x) rgb(colorRamp(c("#ffe4cc", "#ffb54d"))(x), maxColorValue = 255)
@@ -408,7 +419,7 @@ brief_self_plot
 #### BRIEF-2 Self-Report Table Version 1
 
 ```{r, include=TRUE, fig.height=8}
-brief_color_tbl(brief_self_2)
+#brief_color_tbl(brief_self_2)
 ```
 
 #### BRIEF-2 Self-Report Table Version 2
@@ -453,7 +464,12 @@ brief_parent %>%
                                         }
                                       ),
       `Post Treatment` = colDef(name = "Post Treatment",
-                                align = "center")),
+                                align = "center",
+                                style = function(value) {
+                                          normalized <- (value - min(brief_parent$`Post Treatment`)) / (max(brief_parent$`Post Treatment`) - min(brief_parent$`Post Treatment`))
+                                          color <- orange_pal(normalized)
+                                          list(background = color)
+                                        })),
     pagination = FALSE,
     striped = TRUE,
     outlined = TRUE,
