--- a/index.Rmd
+++ b/index.Rmd
@@ -71,6 +71,9 @@ demo <- import(here("data", "GASY_demo.xlsx"),
 
 strategy <- import(here("data", "GASY_strategy.xlsx"),
                    setclass = "tbl_df")
+
+tarf <- import(here("data", "GASY_TARF.xlsx"),
+                   setclass = "tbl_df")
 ```
 
 ## Demographic Information 
@@ -120,6 +123,14 @@ gas_tbl
 ```
 
 ### BRIEF-2 {.tabset .tabset-fade .tabset-pills}
+
+Self-report responses that guided treatment at time of pre-baseline data collection:
+
+  * Task Completion Scale
+  * Plan/Organize Scale
+  * Cognitive Regulation Index 
+  
+The only elevated scores from the parent-report pre-baseline were the Shift Scale, Emotional Control Scale, and Emotional Regulation Index 
 
 ```{r, include=FALSE}
 head(brief_parent)
@@ -227,7 +238,7 @@ brief_tbl <- function(df) {
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 }
   
 brief_tbl(brief_self)
@@ -279,7 +290,7 @@ brief_self_2 %>%
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 
 brief_color_tbl <- function(df) {
   df %>% 
@@ -333,10 +344,10 @@ brief_color_tbl <- function(df) {
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 }
 
-#brief_color_tbl(brief_self_2)
+brief_color_tbl(brief_self_2)
 
 # color scheme attempt 
 orange_pal <- function(x) rgb(colorRamp(c("#ffe4cc", "#ffb54d"))(x), maxColorValue = 255)
@@ -362,7 +373,12 @@ brief_self_2 %>%
                                         }
                                       ),
       `Post Treatment` = colDef(name = "Post Treatment",
-                                align = "center")),
+                                align = "center",
+                                style = function(value) {
+                                          normalized <- (value - min(brief_self_2$`Post Treatment`)) / (max(brief_self_2$`Post Treatment`) - min(brief_self_2$`Post Treatment`))
+                                          color <- orange_pal(normalized)
+                                          list(background = color)
+                                        })),
     pagination = FALSE,
     striped = TRUE,
     outlined = TRUE,
@@ -371,7 +387,7 @@ brief_self_2 %>%
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 
 brief_color_tbl_2 <- function(df) {
   df %>% 
@@ -395,7 +411,12 @@ brief_color_tbl_2 <- function(df) {
                                         }
                                       ),
       `Post Treatment` = colDef(name = "Post Treatment",
-                                align = "center")),
+                                align = "center",
+                                style = function(value) {
+                                          normalized <- (value - min(brief_self_2$`Post Treatment`)) / (max(brief_self_2$`Post Treatment`) - min(brief_self_2$`Post Treatment`))
+                                          color <- orange_pal(normalized)
+                                          list(background = color)
+                                        })),
     pagination = FALSE,
     striped = TRUE,
     outlined = TRUE,
@@ -404,7 +425,7 @@ brief_color_tbl_2 <- function(df) {
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 }
 
 brief_color_tbl_2(brief_self_2)
@@ -419,7 +440,7 @@ brief_self_plot
 #### BRIEF-2 Self-Report Table Version 1
 
 ```{r, include=TRUE, fig.height=8}
-#brief_color_tbl(brief_self_2)
+brief_color_tbl(brief_self_2)
 ```
 
 #### BRIEF-2 Self-Report Table Version 2
@@ -478,10 +499,21 @@ brief_parent %>%
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 ```
 
 ### CLASS {.tabset .tabset-fade .tabset-pills}
+
+Self-report responses that guided treatment at time of pre-baseline data collection:
+
+  * Difficulty taking notes 
+  * Difficulty understanding new material 
+  * Difficulty studying for tests or quizzes 
+  
+Parent-report responses that guided treatment at time of pre-baseline data collection:
+
+  * Difficulty taking notes 
+  * Trouble remembering what was studied 
 
 ```{r, include=FALSE}
 head(class_self_1)
@@ -667,7 +699,7 @@ class_tbl <- function(df) {
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 }
 ```
 
@@ -709,6 +741,13 @@ class_tbl(class_parent_all)
 
 ### PCSS {.tabset .tabset-fade .tabset-pills}
 
+Pre-baseline symptom severity levels that guided treatment selection:
+
+  * Difficulty concentrating 
+  * Difficulty remembering
+  * Cognitive symptom cluster 
+
+
 ```{r, include=FALSE}
 head(pcss)
 
@@ -730,7 +769,7 @@ pcss_table <- pcss %>%
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 
 
 pcss_items <- pcss[1:22, ]
@@ -755,7 +794,12 @@ pcss_items_tbl <- pcss_items %>%
                                           list(background = color)
                                         }),
       `Post Treatment` = colDef(name = "Post Treatment",
-                                align = "center")),
+                                align = "center",
+                                style = function(value) {
+                                          normalized <- (value - min(pcss_items$`Post Treatment`)) / (max(pcss_items$`Post Treatment` - min(pcss_items$`Post Treatment`)))
+                                          color <- orange_pal(normalized)
+                                          list(background = color)
+                                        })),
     pagination = FALSE,
     striped = TRUE,
     outlined = TRUE,
@@ -764,7 +808,7 @@ pcss_items_tbl <- pcss_items %>%
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 
 pcss_cluster_tbl <- pcss_total_cluster %>% 
   reactable(
@@ -785,7 +829,12 @@ pcss_cluster_tbl <- pcss_total_cluster %>%
                                           list(background = color)
                                         }),
       `Post Treatment` = colDef(name = "Post Treatment",
-                                align = "center")),
+                                align = "center",
+                                style = function(value) {
+                                          normalized <- (value - min(pcss_total_cluster$`Post Treatment`)) / (max(pcss_total_cluster$`Post Treatment` - min(pcss_total_cluster$`Post Treatment`)))
+                                          color <- orange_pal(normalized)
+                                          list(background = color)
+                                        })),
     pagination = FALSE,
     striped = TRUE,
     outlined = TRUE,
@@ -794,7 +843,7 @@ pcss_cluster_tbl <- pcss_total_cluster %>%
     bordered = TRUE,
     searchable = TRUE,
     height = 600,
-    width = 500)
+    width = 600)
 
 ```
 
@@ -970,3 +1019,34 @@ freq_plot2
 ```{r, include=TRUE}
 help_plot2
 ```
+
+
+## Treatment Implementation Measurements 
+
+### TARF 
+
+The TARF is used to measure social validity. 
+
+```{r, include=FALSE}
+head(tarf)
+
+tarf_tbl <- tarf %>% 
+  reactable(columns = list(
+    Question = colDef(align = "left"),
+    Response = colDef(align = "center")),
+    striped = TRUE,
+    outlined = TRUE,
+    compact = TRUE,
+    highlight = TRUE,
+    bordered = TRUE,
+    height = 500,
+    width = 600)
+```
+
+```{r, include=TRUE}
+tarf_tbl
+```
+
+### Treatment Compliance 
+
+Participant 2 did not cancel or reschedule any sessions. 
